Add function of multiple screen logic.

--- a/MyApplication_brightness/app/src/main/res/values/strings.xml
+++ b/MyApplication_brightness/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="main">Main Activity</string>
+    <string name="goto_sos">SOS</string>
+    <string name="goto_home">GOTO HOME</string>
+    <string name="return_sub">RETURN</string>
 </resources>
